--- a/_posts/2019-12-20-the-us-narrative-today.html
+++ b/_posts/2019-12-20-the-us-narrative-today.html
@@ -1782,107 +1782,107 @@ stories:
   domain: http://www.sun-sentinel.com/
   link: http://www.sun-sentinel.com/news/crime/fl-ne-deputy-causes-new-jury-trial-20191219-gjdb6k3jkbb7npd3u6s37m4yvi-story.html
 images:
-- name: castle-on-hill-castle-on-hill-edinburgh-alien-goggles.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-alien-goggles.JPG
-- name: catacombs-catacombs-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-constitution.jpg
-- name: gypsymosaic-gypsy-eyes-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-blue-electricity.jpg
-- name: powerlines-power-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-cinnamon-rolls.jpg
-- name: lincoln-memorial-lincolnmemorial-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-yellow-paper.jpg
-- name: oldsmallboat-oldsmallboat-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-internet-numbers.jpg
-- name: machine-road-machine-road-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-spagetti-accident.jpg
-- name: oldhouse-granaryfield-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-dark-soul.jpg
-- name: rockingchair-rockingchair-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-crafty-painting.jpg
-- name: christianity-christianity-under-construction-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-yellow-collage.jpg
-- name: bf-skinner-wwdc-2011---moscone---san-francisco_5809419816_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-wwdc-2011---moscone---san-francisco_5809419816_o.jpg
-- name: oldhouse-oldhouse-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-crafty-painting.jpg
-- name: abe-lincoln-one-smooth-ride-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smooth-ride-file-00-00-07-91.jpg
-- name: server-racks-door-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-kandinsky-bv.jpg
-- name: stalin-time-sunflower-big-green.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-sunflower-big-green.jpg
-- name: mosaic-face-mosaic-face-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crunch-paper.jpg
-- name: braceros-domingo-ulloa-statue-facing-scrunched.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-statue-facing-scrunched.jpg
-- name: powerlines-power-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-green-zuma.jpg
-- name: cannon-facing-cannon-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-dark-dali.jpg
-- name: oldsmallboat-oldsmallboat-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-purple-storm.jpg
-- name: cargo-ship-cargo-ship-on-sea-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-ww2-dresden.jpg
-- name: store-on-corner-store-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-purple-storm.jpg
-- name: rockingchair-rockingchair-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dali-three.jpg
-- name: beach-clouds-lifeguard-beachclouds-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-blue-circuit.jpg
-- name: aws-s3-riverrapids-riverrapids-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-riverrapids-riverrapids-still.jpg
-- name: oldtrain-oldtrain-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-kandinsky-bv.jpg
-- name: catacombs-catacombs-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-diego-rivera1.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-light-dali.jpg
-- name: white-house-lawn-white-house-lawn-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-ww2-color.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-rainbow-festival.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-crunch-paper.jpg
-- name: nyc-flag-nycflag-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-yellow-collage.jpg
-- name: downtheline-downtheline.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline.jpg
-- name: razorwire-DSC-0080-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-colorful-blocks.jpg
-- name: braceros-domingo-ulloa-through-berlin-wall.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-through-berlin-wall.jpg
-- name: trucksilo-trucksilo-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-neo-instinct.jpg
-- name: flower-barbed-wire-flower-barbed-wire-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-creativity.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-mucha-mult.jpg
+- name: la-muse-flowers-diamon-creek.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-flowers-diamon-creek.jpg
+- name: berlinwall2-berlinwall-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-umberto-bocc.jpg
+- name: old-cabin-oldcabin-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-colorful-blocks.jpg
+- name: sand-hand-sand-hand-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-clean-view.jpg
+- name: store-on-corner-oldcabin-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-ww2-dresden.jpg
+- name: bf-skinner-boats-waterfront-bristol.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-boats-waterfront-bristol.jpg
 - name: nazi-invasion-downtown-125thstreet.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-125thstreet.jpg
-- name: white-house-whitehouse-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-clean-view.jpg
-- name: dc-statue-dcstatue-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-kandinsky-bv.jpg
-- name: old-granary-field-granaryfield-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-really-hot.jpg
-- name: hollywood-building-hollywood-building-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-sunday.jpg
-- name: store-on-corner-oldcabin-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-far-away.jpg
-- name: cyber-api-description-wars-api-specification-wars.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-api-specification-wars.png
-- name: stalin-time-gypsy-house-with-pen.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-gypsy-house-with-pen.jpg
-- name: treeinhills-yellowtree-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/treeinhills-yellowtree-still.jpg
-- name: cargo-ship-cargo-ship-on-sea-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-colored-circuits.jpg
-- name: adam-smith-adam-smith-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-bright-sand.jpg
-- name: legal-statue-legalstatue-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-yellow-collage.jpg
-- name: gypsymosaic-gypsy-eyes-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-rainbow-festival.jpg
-- name: window-window-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-wols.jpg
+- name: old-barn-old-barn-1500-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-gred-mash.jpg
+- name: copper-circuit-thinking-man-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-thinking-man-statue.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-rainbow-festival.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-colored-circuits.jpg
+- name: nazi-invasion-down-side-street-shop-sign.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-down-side-street-shop-sign.jpg
+- name: old-granary-field-oldhouse-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-matrix.jpg
+- name: braceros-domingo-ulloa-oxford-old-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-oxford-old-building.jpg
+- name: lincoln-memorial-lincolnmemorial-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-smooth-ride.jpg
+- name: server-cloud1-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-feed-people.jpg
+- name: razorcliff-razorcliff-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-graham-sutherland.jpg
+- name: braceros-domingo-ulloa-hallway-mirrors-hotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-hallway-mirrors-hotel.jpg
+- name: ellis-island-ellisisland-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-purp-paper.jpg
+- name: window-window-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-aqua.jpg
+- name: capital-battle-capitolbattle-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-ww2-dresden.jpg
+- name: liberty-back-statue-liberty-back-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-bright-sand.jpg
+- name: oldcabin-store-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-kandinsky-bv.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-soul.jpg
+- name: razorcliff-razorcliff-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-blue-granite.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dark-dali.jpg
+- name: power-lines-power-lines-empty-space-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-attack-planes.jpg
+- name: legal-statue-legalstatue-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-emily-carr.jpg
+- name: bf-skinner-old-building-seattle-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-building-seattle-clouds.jpg
+- name: stories-new-path-in-the-woods-black-white.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-path-in-the-woods-black-white.jpg
+- name: server-racks-door-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-kandinsky-bv.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-alberto-giacometti.jpg
+- name: file-00_00_07_91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00_00_07_91.jpg
+- name: mosaic-face-mosaic-face-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-smoking-cigarette.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-creativity.jpg
+- name: copper-circuit-border-watching-cars.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-border-watching-cars.jpg
+- name: rockingchair-rockingchair-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-gred-mash.jpg
+- name: treeinhills-yellowtree-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/treeinhills-yellowtree-still-1200.jpg
+- name: old-gas-pumps-oldgaspumps-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-colorful-dream.jpg
+- name: ellis-island-ellis-island-room-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-kand-two.jpg
+- name: stories-flower-barbed-wire-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-flower-barbed-wire-nazi-poster.jpg
+- name: machine-road-machine-road-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-marcel-duchamp.jpg
+- name: power-lines-power-lines-empty-space-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-colorful-blocks.jpg
+- name: school-clouds-church-clouds-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dark-rain.jpg
+- name: nazi-invasion-checkpoint-charlie-mcdonalds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-checkpoint-charlie-mcdonalds.jpg
+- name: nazi-invasion-statue-with-shield-dark.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-with-shield-dark.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-green-zuma.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-green-zuma.JPG
+- name: oldcabin-store-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-dark-dali.jpg
+- name: oldroad-old-road-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-oily-mcoilface.jpg
+- name: oldbarn-oldbarn-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-kandinsky-bv.jpg
 ---
 Home For The Holidays.&nbsp;Baltimore Police Are Prioritizing Officers' Mental Health.&nbsp;Joshua Tree National Park Braces For Crowds Amid Holidays.&nbsp;Critics Attack Bevin's Pardon Of Man Convicted Of Child Rape.&nbsp;Preston Commission Ponders Location For Election Center.&nbsp;Elf On The White House Shelf.&nbsp;Mount Carmel Guild Of Trenton.&nbsp;Rental Vehicle Stolen While Florida Man Has Dinner.&nbsp;
